--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <div class="container">
+        <p id="subtitle">Clicca per una sorpresa!</p>
         <h1 id="title">PIPUPAPU</h1>
         <canvas id="fireworks"></canvas>
         <audio id="pipupapu-sound" src="pipupapu.mp3"></audio>
-    </div>
+    </div>     
     <script src="script.js"></script>
 </body>
 </html>
