--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <div class="container">
         <p id="subtitle">Clicca per una sorpresa!</p>
         <h1 id="title">PIPUPAPU</h1>
-        <canvas id="fireworks"></canvas>
+        <img id="surprise-image" src="surprise.png" alt="Surprise Image">
         <audio id="pipupapu-sound" src="pipupapu.mp3"></audio>
-    </div>     
+    </div>
+
+    <!-- Contenitore per i fuochi d'artificio -->
+    <div id="fireworks-container"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
